@@ -3,6 +3,7 @@ History:
 <see Git checking messages for history>
 
 8.0.1   2023/xx/xx
+      - MSS: ensure --with-cursor, and with_cursor argument & attribute, are simple NOOP on platforms not supporting the feature
       - CLI: do not raise a ScreenShotError when -q, or --quiet, is used but return 1
       - tests: fix test_entry_point() with multiple monitors having the same resolution
 
